--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no"/>
-    <title>WebGL Lab</title>
+    <title>CoolCanvas</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
