--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 
     </footer>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r69/three.min.js"></script>
+    <script type="text/javascript" src="libs/jquery.min.js"></script>
+    <script type="text/javascript" src="libs/three.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
